project: don't leak GFileInfo

https://bugzilla.gnome.org/show_bug.cgi?id=755862